kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    istio-injection: enabled
...
