kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minecraft
  namespace: minecraft
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 25565
      name: minecraft
      protocol: TCP
    hosts:
    - "*"
